<?xml version="1.0" encoding="utf-8"?>
<resources>
    
<string name="app_name">Basketball Scoreboard</string>
<string name="btn_setup_done">比赛设置好了</string>
<string name="hometeam_name_hint">第一个参赛队伍名称</string>
<string name="spin_prompt_hometeam">主场球队</string>
<string name="starting_lineup">先发队员</string>
<string name="roster">队员</string>

<!-- Login info -->
<string name="svcba_desc">硅谷华人篮球联赛（SVCBA）自2006年创立以来，历过5个年头，影响迅速扩大，到今天注册会员近千人，已成为湾区华人的最重要体育赛事之一。\n 随着参赛人数的不断增加，参赛队伍规模不断扩大，联赛由最初的三个队双循环比赛发展到十六个参赛队分为A级和B级，B级又分为B1和B2两组的大型复合式日常联赛。\n参加联赛的队伍既有以校友为主体的上海交通大学代表队和台湾交通大学队，又包括以工程师和律师团体为核心的ILG队和TonyXuClub队，参赛 队员从十几岁的青年学生到年近花甲而壮心依旧的老队员，所有球队在每两周固定举行的常规赛中逐队切磋。结束了一周繁忙的工作学习之后，热爱篮球的人们可以组织成球队在不同级别的比赛中活动筋骨磨练技术，这正是SVCBA所秉承的运动，友谊，团结宗旨。每季后还将上演激烈刺激的季后淘汰赛，从热门到黑马悬念 横生，高水平的对决往往引得观者如云。\n 在一季又一季，一周又一周的联赛中，祖籍来自大陆，台湾，港澳以及美国的华人，不分年龄，不分语言，在同一个赛场中 共享运动的快乐，周末的SVCBA比赛已经成了很多人生活中的一个固定项目。队员们也从比赛中相互结识相互了解，从赛场上队友乃至对手变成场下的朋友兄弟。积极向上的体育精神与精诚合作的团队意识从联赛传递到每个球队每名队员，增进海外华人的团结与融合。\n 欢迎华人篮球团体或者篮球爱好者加入联赛，让我们一起把这项精彩的运动带给更多的华人。
\n \n
SVCBA 组委会 Email: svcbaboard@gmail.com \n \n
(App created by Dawei Sun, Tenghui Zhu, Liangjun Jiang)
</string>
<string name="login_hint">继续使用本应用，请登录</string>
<string name="alert_dialog_text_entry">登录/Login</string>
<string name="alert_dialog_text_hint">SVCBA memebers use the assigned username and password to login.To test drive this app, use guest:guest.</string>
<string name="alert_dialog_ok">OK</string>
<string name="alert_dialog_cancel">Cancel</string>
<string name="alert_diglog_username">Username</string>
<string name="alert_diglog_password">Password</string>

<!-- help info -->
<string name="select_player_help">点击队员来加入先发队列,点击先发队员来移除先发,按"menu"添加新队员 </string>
<string name="normal_help">按"menu"选择"裁判暂停"控制时间</string>



<string name="spin_prompt_awayteam">客场球队</string>
<string name="spin_prompt_hometeam_color">主队队服颜色</string>
<string name="spin_prompt_awayteam_color">客队队服颜色</string>
<string name="hometeam">主队</string>
<string name="awayteam">客队</string>
<string name="game">比赛</string>
<string name="hometeam_player">主队队员</string>
<string name="awayteam_player">客队队员</string>



<string name="game_quarter">4节，每节12分钟</string>
<string name="game_quarter_length">节间休息30秒，中场休息2分钟</string>
<string name="game_foulout">队员个人5次犯规罚出场外，2次技术犯规罚出场外</string>
<string name="game_teamfoul_threshold_1">全队半场犯规7次开始1+1罚球</string>
<string name="game_teamfoul_threshold_2">全队半场10次犯规开始2次罚球</string>
<string name="game_stopwatch">第四节最后两分钟，分差在10分以内，每球停表</string>



<!-- Game info -->
<string name="quit">退出</string>
<string name="err_same_color">两队的队服颜色相同</string>
<string name="err_same_team">参赛的两只队伍选择了同一个队伍</string>
<string name="err_hometeam_starting_lineup_not_full">主队先发不全</string>
<string name="err_awayteam_starting_lineup_not_full">客队先发不全</string>
<string name="start">开始比赛</string>
<string name="game_timeout">每场比赛每队有三次暂停</string>
<string name="game_overtime">加时赛，每个2分钟，每球停表</string>
<color name="cl_score_tie">#FFFF00</color>
<color name="cl_score_lead">#FF0000</color>
<color name="cl_score_behind">#00FF00</color>
<string name="timeout">暂停</string>
<string name="sub">替换</string>
<string name="save">保存</string>

<string name="foul">犯规</string>
<string name="shoot1">一分投篮</string>
<string name="shoot2">二分投篮</string>
<string name="shoot3">三分投篮</string>
<string name="turnover">失误</string>
<string name="ab_timeout">停</string>
<string name="ab_foul">规</string>
<string name="shoot">投篮</string>
<string name="made">进球</string>
<string name="miss">偏出</string>
<string name="notimplemented">此功能尚未实现</string>
<string name="invalideitem">无效选项</string>


<string name="rebound_none">无人获得篮板球</string>
<string name="rebound">篮板球</string>
<string name="rebound_f">前场篮板</string>
<string name="rebound_b">后场篮板</string>
<string name="foulout">犯规达到5次，罚出场外</string>
<string name="sub_off">换下场</string>
<string name="sub_on">换上场</string>
<string name="stat_home">主队统计</string>
<string name="ab_1p">1分</string>
<string name="ab_name">名</string>
<string name="ab_2p">2分</string>
<string name="ab_3p">3分</string>
<string name="ab_p">分</string>
<string name="ab_rb">板</string>
<string name="ab_f">规</string>
<string name="ab_to">误</string>
<string name="stat_away">客队统计</string>
<string name="add_player">添加队员</string>
<string name="err_input_player_name">请输入队员名字</string>
<string name="ab_ass">助</string>
<string name="ab_steal">断</string>
<string name="go_on">继续比赛</string>
<string name="ref_timeout">裁判暂停</string>
<string name="undo">取消输入</string>
<string name="stat_chart">读取数据</string>
<string name="err_not_implement">该功能未实现</string>
<string name="steal">抢断</string>
<string name="assist">助攻</string>
<string name="confirm">确认</string>
<string name="cancel">取消</string>
<string name="confirm_action_remove">确定要删除吗?</string>
<string name="miniSDK">7</string>
<string name="targetSDK">7</string>
</resources>
