<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:paddingTop="15dip"
        android:text="@string/svcba_desc"
        android:textColor="@color/selected"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="3dip"
        android:text="@string/login_hint"
        android:textColor="@color/divide_color" />
    
    <Button android:id="@+id/text_entry_button"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/alert_dialog_text_entry"/>
    

</LinearLayout>