<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
>
	<TextView
		android:id="@+id/tx_hometeam_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="36dp"
	/>
	<TextView
		android:id="@+id/tx_awayteam_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="36dp"
		android:layout_alignParentRight="true"
	/>
	<TextView
		android:id="@+id/tx_hometeam_score"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/tx_hometeam_name"
		android:layout_alignParentTop="true"
		android:textSize="36dp"
		android:paddingLeft="15dp"
	/>
	<TextView
		android:id="@+id/tx_awayteam_score"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toLeftOf="@id/tx_awayteam_name"
		android:layout_alignParentTop="true"
		android:textSize="36dp"
		android:paddingRight="15dp"
	/>
	<TextView
		android:id="@+id/tx_hometeam_timeout"
		android:layout_below="@id/tx_hometeam_name"
		android:textSize="24dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="3"
	/>
	<TextView
		android:id="@+id/tx_awayteam_foul"
		android:layout_below="@id/tx_hometeam_name"
		android:textSize="24dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:text="10"
	/>
	<TextView
		android:id="@+id/tx_hometeam_foul"
		android:layout_below="@id/tx_hometeam_name"
		android:textSize="24dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/tx_hometeam_timeout"
		android:paddingLeft="10dp"
		android:text="10"
	/>
	<TextView
		android:id="@+id/tx_awayteam_timeout"
		android:layout_below="@id/tx_hometeam_name"
		android:textSize="24dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toLeftOf="@id/tx_awayteam_foul"
		android:paddingRight="10dp"
		android:text="3"
	/>
	<TextView
		android:id="@+id/tx_time"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/tx_hometeam_foul"
		android:layout_centerHorizontal="true"
		android:textSize="64dp"
		android:textColor="#FF22FF"
	/>
	<TextView
		android:id="@+id/tx_quarter"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/tx_hometeam_foul"
		android:layout_alignParentLeft="true"
		android:layout_alignBaseline="@id/tx_time"
		android:textSize="24dp"
	/>
	<TextView
		android:id="@+id/tx_time_backup"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/tx_hometeam_foul"
		android:layout_alignParentRight="true"
		android:textSize="24dp"
		android:layout_alignBaseline="@id/tx_time"
	/>
	<LinearLayout
		android:id="@+id/btns_1"
		android:layout_below="@id/tx_time"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<Button
			android:id="@+id/btn_timeout"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:text="@string/timeout"
			android:layout_weight="1"
			android:textSize="20dp"
		/>

		<Button
		    android:id="@+id/btn_sub_off"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/sub_off"
		    android:textSize="20dp" />
		
		<Button
		    android:id="@+id/btn_sub_on"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/sub_on"
		    android:textSize="20dp" />

	</LinearLayout>
	<LinearLayout
		android:id="@+id/btns_2"
		android:layout_below="@id/btns_1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<Button
			android:id="@+id/btn_foul"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:text="@string/foul"
			android:layout_weight="1"
			android:textSize="20dp"
		/>
		<Button
			android:id="@+id/btn_turnover"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:text="@string/turnover"
			android:layout_weight="1"
			android:textSize="20dp"
		/>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/btns_3"
		android:layout_below="@id/btns_2"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<Button
			android:id="@+id/btn_shoot1"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:text="@string/shoot1"
			android:layout_weight="1"
			android:textSize="20dp"
		/>
		<Button
			android:id="@+id/btn_shoot2"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:text="@string/shoot2"
			android:layout_weight="1"
			android:textSize="20dp"
		/>
		<Button
			android:id="@+id/btn_shoot3"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:text="@string/shoot3"
			android:layout_weight="1"
			android:textSize="20dp"
		/>
	</LinearLayout>
	
	<LinearLayout
		android:id="@+id/btns_4"
		android:layout_below="@id/btns_3"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<Button
			android:id="@+id/btn_save"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:text="@string/save"
			android:layout_weight="1"
			android:textSize="20dp"
		/>
		
	</LinearLayout>
	
	<ListView
		android:id="@+id/actions"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@id/btns_4"
	/>
</RelativeLayout>
